--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "dacby-website",
+  "homepage": "https://ashish-kumar-888.github.io/DACBY-WEBSITE/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1"
